# CRUD_Basico

./: .env-example  Dockerfile  pyproject.toml
src/: controller.py  db.py  db_conn.py  models.py  schema.py
